# tuple_tools

./: CMakeLists.txt  LICENSE  README.md  tt_bind.h  tt_for_each.h  tt_for_each_test.cpp  tt_predicative_get_test.cpp
CMake/: DownloadGtest.cmake
examples/: CMakeLists.txt  callback_registry.cpp  print_all.cpp
tuple_tools/: CMakeLists.txt  conditional.h  for_each.h  for_each_test.cpp  predicative_get.h  predicative_get_test.cpp
